--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <div class="container">
     <div class="left_box">
-      <img src="./images/image-product-desktop.jpg" alt="">
+      <!-- <img src="./images/image-product-desktop.jpg" alt=""> -->
     </div>
     <div class="right_box">
       <div class="content">
